; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/kernel/extr_smp_tlb.c_ipi_flush_tlb_kernel_range.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/kernel/extr_smp_tlb.c_ipi_flush_tlb_kernel_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tlb_args = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ipi_flush_tlb_kernel_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipi_flush_tlb_kernel_range(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tlb_args*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.tlb_args*
  store %struct.tlb_args* %5, %struct.tlb_args** %3, align 8
  %6 = load %struct.tlb_args*, %struct.tlb_args** %3, align 8
  %7 = getelementptr inbounds %struct.tlb_args, %struct.tlb_args* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.tlb_args*, %struct.tlb_args** %3, align 8
  %10 = getelementptr inbounds %struct.tlb_args, %struct.tlb_args* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @local_flush_tlb_kernel_range(i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @local_flush_tlb_kernel_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
